--- a/Trivia.UI/PlayerFirstLevelPage.xaml
+++ b/Trivia.UI/PlayerFirstLevelPage.xaml
@@ -40,7 +40,7 @@
         </Label>
         <Button Name="displayAnswerA" HorizontalAlignment="Left" Height="68" Margin="74,287,0,0" VerticalAlignment="Top" Width="319" Click="AnswerAButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
         <Button Name="displayAnswerB" HorizontalAlignment="Left" Height="68" Margin="551,287,0,0" VerticalAlignment="Top" Width="319" Click="AnswerBButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <Label Content="D:" HorizontalAlignment="Left" Height="37" Margin="503,434,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <Label Content="D:" HorizontalAlignment="Left" Height="37" Margin="503,418,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Label Content="C:" HorizontalAlignment="Left" Height="37" Margin="26,437,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <Label Content="C:" HorizontalAlignment="Left" Height="37" Margin="26,421,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -60,9 +60,23 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button Name="displayAnswerC"  HorizontalAlignment="Left" Height="68" Margin="74,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <Button Name="displayAnswerD" HorizontalAlignment="Left" Height="68" Margin="551,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="displayAnswerC"  HorizontalAlignment="Left" Height="68" Margin="74,409,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="displayAnswerD" HorizontalAlignment="Left" Height="68" Margin="551,409,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
         <TextBlock x:Name="wrongAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="37" Margin="356,245,319,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF9C0000" RenderTransformOrigin="0.636,-0.086" Text="   Wrong answer"/>
         <TextBlock x:Name="correctAnswer"  Visibility="Collapsed" HorizontalAlignment="Center" Height="42" TextWrapping="Wrap" Text="  correct answer" VerticalAlignment="Top" Width="224" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.501,2.04" Margin="357,245,319,0"/>
+        <Button Content="50:50" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="138" Click="Hint5050Button" FontSize="30" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Consolas" Opacity="0.9" FontWeight="Bold" Margin="551,531,0,0"/>
+        <Button Content="Skip" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="138" Click="SkipQuestionButton" FontSize="28" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Consolas" Opacity="0.9" FontWeight="Bold" Margin="732,531,0,0"/>
+        <Label Content="hints left:" HorizontalAlignment="Left" Height="37" Margin="399,483,0,0" VerticalAlignment="Top" Width="151" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.82,2.061">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="1.625"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <TextBlock x:Name="Hint5050" HorizontalAlignment="Center" TextAlignment="Center" Height="44" Padding="7" Margin="551,482,211,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="138" FontFamily="Showcard Gothic" FontSize="24"/>
+        <TextBlock x:Name="HintSkipQuestion" HorizontalAlignment="Center" TextAlignment="Center" Height="44" Padding="7" Margin="732,482,30,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="138" FontFamily="Showcard Gothic" FontSize="24"/>
     </Grid>
 </Page>
