--- a/Trivia.UI/MainWindow.xaml
+++ b/Trivia.UI/MainWindow.xaml
@@ -1,6 +1,11 @@
 ﻿<NavigationWindow x:Class="Trivia.UI.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Let's Get Quizzical" Height="600" Width="900" Source="GameStart.xaml">
+    Title="Let's Get Quizzical" Height="700" Width="900" 
+        MinHeight="700"
+        MinWidth="900"
+        MaxHeight="700"
+        MaxWidth="900"
+                  Source="GameStart.xaml">
 
 </NavigationWindow>
