--- a/Trivia.UI/PlayerThirdLevelPage.xaml
+++ b/Trivia.UI/PlayerThirdLevelPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Trivia.UI"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="900" Background="#edea49"
+      d:DesignHeight="700" d:DesignWidth="900" Background="#edea49"
       Title="PlayerThirdLevelPage">
 
     <Grid>
@@ -64,5 +64,29 @@
         <Button Name="displayAnswerD" HorizontalAlignment="Left" Height="68" Margin="551,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
         <TextBlock x:Name="wrongAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="37" Margin="356,245,319,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF9C0000" RenderTransformOrigin="0.636,-0.086" Text="   Wrong answer"/>
         <TextBlock x:Name="correctAnswer"  Visibility="Collapsed" HorizontalAlignment="Center" Height="42" TextWrapping="Wrap" Text="  correct answer" VerticalAlignment="Top" Width="224" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.501,2.04" Margin="357,245,319,0"/>
+        <Button Content="50:50" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="138" Click="Hint5050Button" FontSize="24" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Consolas" Opacity="0.9" FontWeight="Bold" Margin="551,512,0,0"/>
+        <Button Content="Skip" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="138" Click="SkipQuestionButton" FontSize="24" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Consolas" Opacity="0.9" FontWeight="Bold" Margin="732,512,0,0"/>
+        <Label Content="         stuck and need help?            " HorizontalAlignment="Left" Height="37" Margin="68,516,0,0" VerticalAlignment="Top" Width="479" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.82,2.061">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="1.625"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <TextBlock x:Name="Hint5050" HorizontalAlignment="Center" TextAlignment="Center" Height="44" Padding="7" Margin="732,565,30,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="138" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF63005D"/>
+        <TextBlock x:Name="HintSkipQuestion" HorizontalAlignment="Center" TextAlignment="Center" Height="44" Padding="7" Margin="551,566,211,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="138" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="1.918,0.554" Foreground="#FF63005D"/>
+        <Label Content="&#x9;&#x9;&#x9;  Hints left:" HorizontalAlignment="Left" Height="37" Margin="71,563,0,0" VerticalAlignment="Top" Width="479" FontFamily="Consolas" FontSize="24" RenderTransformOrigin="0.82,2.061" FontWeight="Bold">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="1.625"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
     </Grid>
 </Page>
