--- a/Trivia.UI/QuizzardInitialPage.xaml
+++ b/Trivia.UI/QuizzardInitialPage.xaml
@@ -125,18 +125,14 @@
             </Label.RenderTransform>
         </Label>
         <Button Content="Finish" HorizontalAlignment="Left" Height="40" Margin="716,462,0,0" VerticalAlignment="Top" Width="161" Click="FinishButton" Background="#FF7DB07A" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <RadioButton Content="Normal Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,456,0,0" FontSize="16" FontFamily="Consolas" IsChecked="True"/>
-        <RadioButton Content="Timed Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,487,0,0" Height="24" FontSize="16" Width="168" FontFamily="Consolas" RenderTransformOrigin="0.753,0.087"/>
-        <RadioButton Content="Bonus Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,516,0,0" FontFamily="Consolas" FontSize="16"/>
-        <TextBox HorizontalAlignment="Left" Height="31" TextAlignment="Center" TextWrapping="Wrap" Text="2-10 points per correct answer" FontFamily="Consolas" FontWeight="Bold" FontSize="14" x:Name="Question_Copy" VerticalAlignment="Top" Width="275" Margin="176,513,0,0" RenderTransformOrigin="0.5,0.5">
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="0.078"/>
-                    <RotateTransform/>
-                    <TranslateTransform Y="0.399"/>
-                </TransformGroup>
-            </TextBox.RenderTransform>
-        </TextBox>
+        <RadioButton Name="rBtnNormal" Content="Normal Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="27,442,0,0" FontSize="16" FontFamily="Consolas" IsChecked="True"/>
+        <RadioButton Name="rBtnTimed" Content="Timed Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="28,473,0,0" Height="24" FontSize="16" Width="168" FontFamily="Consolas" RenderTransformOrigin="0.753,0.087"/>
+        <RadioButton Name="rBtnBonus" Content="Bonus Question" GroupName="QuestionOptions" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="26,557,0,0" FontFamily="Consolas" FontSize="16"/>
+        <TextBlock Name="rBtnBonusDesc" Text="Select a number to multiply this question's points." HorizontalAlignment="Left" Height="35" Margin="180,586,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="227" FontFamily="Consolas" FontSize="14" />
+        <TextBlock Name="BonusNum" HorizontalAlignment="Left" Height="33" TextAlignment="Center" TextWrapping="Wrap" Text="2" FontFamily="Consolas" FontWeight="Bold" FontSize="24"  VerticalAlignment="Top" Width="57" Margin="350,549,0,0" RenderTransformOrigin="0.5,0.5" />
+        <TextBlock Name="TimeNum" HorizontalAlignment="Left" Height="33" TextAlignment="Center" TextWrapping="Wrap" Text="7" FontFamily="Consolas" FontWeight="Bold" FontSize="24"  VerticalAlignment="Top" Width="34" Margin="373,469,0,0" RenderTransformOrigin="0.5,0.5" />
+        <Slider Foreground="Black" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Minimum="2" Maximum="10" HorizontalAlignment="Left" Margin="180,557,0,0" VerticalAlignment="Top" Width="165" ValueChanged="SliderBonus_ValueChanged"/>
+        <Slider Foreground="Black" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Minimum="7" Maximum="20" HorizontalAlignment="Left" Margin="180,473,0,0" VerticalAlignment="Top" Width="193" ValueChanged="SliderTime_ValueChanged"/>
+        <TextBlock Name="rBtnTimeDesc" Text="Select the time for an answer. Can be between 7 and 20 seconds." HorizontalAlignment="Left" Height="35" Margin="180,513,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" FontFamily="Consolas" FontSize="14" />
     </Grid>
 </Page>
