--- a/Trivia.UI/QuizzardTestStart.xaml
+++ b/Trivia.UI/QuizzardTestStart.xaml
@@ -58,5 +58,10 @@
         <TextBlock Name="pPoints" HorizontalAlignment="Left" Height="34" Margin="748,151,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="122" FontFamily="Showcard Gothic" FontSize="30" Foreground="#FFA60202"/>
         <TextBlock x:Name="wrongAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="37" Margin="356,160,319,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF9C0000" RenderTransformOrigin="0.636,-0.086" Text="   Wrong answer"/>
         <TextBlock x:Name="correctAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="42" TextWrapping="Wrap" Text="  correct answer" VerticalAlignment="Top" Width="224" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.501,2.04" Margin="357,159,319,0"/>
+        <TextBlock Name="TimeType" Visibility="Hidden" HorizontalAlignment="Left" Height="34" Margin="74,151,0,0" TextWrapping="Wrap" Text="time:" VerticalAlignment="Top" Width="88" FontFamily="Showcard Gothic" FontSize="30" Foreground="Black"/>
+        <TextBlock Name="BonusType" Visibility="Hidden" HorizontalAlignment="Left" Height="34" Margin="74,151,0,0" TextWrapping="Wrap" Text="bonus:" VerticalAlignment="Top" Width="203" FontFamily="Showcard Gothic" FontSize="30" Foreground="Black"/>
+        <!--<TextBlock Name="NormalType" Visibility="Visible" HorizontalAlignment="Left" Height="34" Margin="74,151,0,0" TextWrapping="Wrap" Text="Normal" VerticalAlignment="Top" Width="133" FontFamily="Showcard Gothic" FontSize="30" Foreground="Black"/>-->
+        <TextBlock x:Name="SecondsTimer" Visibility="Hidden" HorizontalAlignment="Left" Height="34" Margin="210,151,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="83" FontFamily="Showcard Gothic" FontSize="30" Foreground="#FFA60202"/>
+        <TextBlock x:Name="BonusPoints" Visibility="Hidden" HorizontalAlignment="Left" Height="34" Margin="210,151,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="197" FontFamily="Showcard Gothic" FontSize="30" Foreground="#FFA60202"/>
     </Grid>
 </Page>
